# mcp-studio

./: .gitignore  .prettierignore  Makefile  README.md  README_EN.md  package-lock.json  package.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
apps/desktop/: .eslintrc.json  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 20250101000000_init.sql
apps/desktop/src-tauri/src/: error.rs  main.rs
apps/desktop/src-tauri/src/application/: config_commands.rs  config_queries.rs  mcp_commands.rs  mcp_queries.rs  mod.rs
apps/desktop/src-tauri/src/domain/: config.rs  cqrs.rs  mcp.rs  mod.rs
apps/desktop/src-tauri/src/infra/: db.rs  event_publisher.rs  http.rs  http_server.rs  logging.rs  mcp_client.rs  mod.rs  repo_config.rs  repo_mcp.rs  sse_transport.rs
apps/desktop/src-tauri/src/interface/: commands.rs  mod.rs  tray.rs
apps/desktop/src/components/: ErrorBoundary.tsx  LanguageSwitcher.tsx
apps/desktop/src/components/studio/: AddEditServerDialog.tsx  BatchTester.tsx  SchemaForm.tsx  ServerDock.tsx  SettingsDialog.tsx  StudioLayout.tsx  ToolDetail.tsx  ToolList.tsx  WebhookPanel.tsx  Workspace.tsx
apps/desktop/src/components/ui/: alert.tsx  avatar.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  command.tsx  context-menu.tsx  data-table.tsx  date-picker.tsx  dialog.tsx  dropdown-menu.tsx  (+15 more)
apps/desktop/src/hooks/: useAppConfig.ts  useEvent.ts  useHttpReceiver.ts  useMcpServers.ts  useMcpTools.ts  useTheme.tsx
apps/desktop/src/i18n/: index.ts
apps/desktop/src/lib/: events.ts  logger.ts  store.ts  utils.ts
apps/desktop/src/styles/: globals.css
docs/: README.md  changelog.md
docs/architecture/: index.md
docs/en/: README.md
docs/en/architecture/: index.md
docs/en/getting-started/: index.md
docs/getting-started/: index.md
(+2 files in other folders)
