[package]
name = "mcp-studio"
version = "0.3.0"
description = "MCP Studio - A MCP Client Debug Tool"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging (Tracing Ecosystem)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time", "registry"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

# Database (SQLite + SQLx)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
async-trait = "0.1.89"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
reqwest = { version = "0.12.25", features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

# MCP SDK (Model Context Protocol)
rmcp = { version = "0.11", features = ["client", "transport-streamable-http-client-reqwest"] }

# For SSE client implementation (manual)
eventsource-stream = "0.2"
futures = "0.3"

# HTTP Server for receiving requests
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-util = { version = "0.7", features = ["rt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Binary configuration
[[bin]]
name = "mcp-studio"
path = "src/main.rs"
